[gd_scene load_steps=13 format=3 uid="uid://bkpoc1mrorc8e"]

[ext_resource type="Script" path="res://obstacle.gd" id="1_1fay5"]
[ext_resource type="Texture2D" uid="uid://biotvdx2sb3lf" path="res://textures/asteroid.png" id="2_i3gg1"]
[ext_resource type="Texture2D" uid="uid://c0i0wb5kh1ky" path="res://textures/splode_A0.png" id="3_uydin"]
[ext_resource type="Texture2D" uid="uid://ckccxj3al5c7b" path="res://textures/splode_A1.png" id="4_fm74k"]
[ext_resource type="Texture2D" uid="uid://dcjs7o824fhi0" path="res://textures/splode_A2.png" id="5_ckaaa"]
[ext_resource type="Texture2D" uid="uid://dasnkuc7cqetk" path="res://textures/splode_A3.png" id="6_nc0oo"]
[ext_resource type="Texture2D" uid="uid://o81n7wqxicby" path="res://textures/splode_A4.png" id="7_6gk6n"]
[ext_resource type="Texture2D" uid="uid://lm3ditkqd32x" path="res://textures/splode_A5.png" id="8_wnoig"]
[ext_resource type="AudioStream" uid="uid://dt5ms4bwb2all" path="res://sound/u8/othersplode.wav" id="9_str3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4iayi"]
size = Vector2(58, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_uiyr3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_uydin")
}, {
"duration": 1.0,
"texture": ExtResource("4_fm74k")
}, {
"duration": 1.0,
"texture": ExtResource("5_ckaaa")
}, {
"duration": 1.0,
"texture": ExtResource("6_nc0oo")
}, {
"duration": 1.0,
"texture": ExtResource("7_6gk6n")
}, {
"duration": 1.0,
"texture": ExtResource("8_wnoig")
}],
"loop": false,
"name": &"explode",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w4egv"]
radius = 4.0

[node name="Asteroid" type="Area2D" groups=["mirrored"]]
collision_layer = 33
collision_mask = 13
script = ExtResource("1_1fay5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4iayi")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
sprite_frames = SubResource("SpriteFrames_uiyr3")
animation = &"explode"

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
scale = Vector2(0.953125, 0.953125)
texture = ExtResource("2_i3gg1")
metadata/_edit_group_ = true

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="CollisionShape2D"]
stream = ExtResource("9_str3g")
max_distance = 1000.0
attenuation = 1.25
max_polyphony = 3
panning_strength = 2.0

[node name="Mirror" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4iayi")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Mirror"]
sprite_frames = SubResource("SpriteFrames_uiyr3")
animation = &"explode"

[node name="Sprite2D" type="Sprite2D" parent="Mirror"]
scale = Vector2(0.953125, 0.953125)
texture = ExtResource("2_i3gg1")
metadata/_edit_group_ = true

[node name="ExplodeSound" type="AudioStreamPlayer2D" parent="Mirror"]
stream = ExtResource("9_str3g")
max_distance = 1000.0
attenuation = 1.25
max_polyphony = 3
panning_strength = 2.0

[node name="BoundsHitter" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BoundsHitter"]
shape = SubResource("CircleShape2D_w4egv")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="animation_finished" from="CollisionShape2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="animation_finished" from="Mirror/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
